--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,10 @@ spring.jpa.hibernate.ddl-auto=create-drop
 #set logging level because of bug in swagger-models dependency
 #it is already fixed but springfox hasn't released their project with the new dependency
 logging.level.io.swagger.models.parameters.AbstractSerializableParameter=ERROR
+logging.level.org.hibernate.type.descriptor.sql=trace
+server.port=8071
+spring.h2.console.path=/h2-console
+#security
+jwt.header=Authorization
+jwt.secret=mySecret
+jwt.expiration=3000
